--- a/.github/workflows/push-to-org.yaml
+++ b/.github/workflows/push-to-org.yaml
@@ -19,4 +19,4 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.PAT }}
-        repository: orgs/ENTC18/getting-started
+        repository: ENTC18/getting-started
